# cobral

./: $GITHUB_OUTPUT  .gitignore  CHANGELOG.md  Cargo.toml  README.md  bun.lockb  components.json  index.html  package.json  rustfmt.toml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: workflows.yml
.github/workflows/: main.yml  release.yml  webhook.yml
cobral/: Cargo.toml  tauri.conf.json
cobral/capabilities/: default.json
cobral/src/: context.rs  lib.rs
cobral/src/interpreter/: environment.rs  error.rs  mod.rs  value.rs
cobral/src/interpreter/builtin/: io.rs  math.rs  mod.rs  parse.rs
cobral/src/interpreter/eval/expressions/: arithmetic.rs  call.rs  comparison.rs  identifier.rs  list.rs  logical.rs  postfix.rs  prefix.rs
cobral/src/interpreter/eval/statements/: import.rs  mod.rs
cobral/src/interpreter/eval/statements/control_flow/: for.rs  if.rs  mod.rs  switch.rs  while.rs
cobral/src/interpreter/eval/statements/declaration/: assignment.rs  constant.rs  variable.rs
cobral/src/lexer/: error.rs  identifier.rs  mod.rs  number.rs  string.rs  token.rs
cobral/src/logger/: batcher.rs  mod.rs
cobral/src/parser/: environment.rs  error.rs  mod.rs
cobral/src/parser/grammar/expressions/: function.rs  infix.rs  mod.rs  postfix.rs  prefix.rs  primary.rs
cobral/src/parser/grammar/statements/: identifier.rs  import.rs  mod.rs  return.rs
cobral/src/parser/grammar/statements/control_flow/: for.rs  if.rs  switch.rs  while.rs
cobral/src/parser/grammar/statements/declarations/: assignment.rs  constant.rs  function.rs  variable.rs
cobral/src/shared/: mod.rs
cobral/src/shared/ast/: expressions.rs  mod.rs
crates/app/: Cargo.toml  tauri.conf.json
crates/app/src/: context.rs  lib.rs  main.rs  utils.rs
crates/cobral/: Cargo.toml  tauri.conf.json
crates/cobral/capabilities/: default.json
crates/cobral/icons/: icon.icns
crates/cobral/src/: commands.rs  context.rs  event.rs  lib.rs  main.rs  wasm.rs
crates/cobral/src/interpreter/: environment.rs  error.rs  mod.rs  value.rs
crates/cobral/src/interpreter/builtin/: io.rs  math.rs  mod.rs  parse.rs
crates/cobral/src/interpreter/eval/expressions/: arithmetic.rs  call.rs  comparison.rs  identifier.rs  list.rs  logical.rs  mod.rs  postfix.rs  prefix.rs
crates/cobral/src/interpreter/eval/statements/: mod.rs  return.rs
crates/cobral/src/interpreter/eval/statements/control_flow/: for.rs  if.rs  switch.rs  while.rs
crates/cobral/src/interpreter/eval/statements/declaration/: assignment.rs  function.rs  mod.rs  variable.rs
crates/cobral/src/lexer/: mod.rs  number.rs  string.rs  token.rs
crates/cobral/src/logger/: batcher.rs  mod.rs
crates/cobral/src/parser/: core.rs  error.rs  expression.rs  mod.rs  statement.rs  utils.rs
crates/cobral/src/parser/grammar/: mod.rs
crates/cobral/src/parser/grammar/expressions/: function.rs  infix.rs  postfix.rs  prefix.rs  primary.rs
crates/cobral/src/parser/grammar/statements/: identifier.rs  import.rs  mod.rs  return.rs
crates/cobral/src/parser/grammar/statements/control_flow/: for.rs  if.rs  mod.rs  switch.rs  while.rs
crates/cobral/src/parser/grammar/statements/declarations/: assignment.rs  constant.rs  function.rs  mod.rs  variable.rs
crates/cobral/src/shared/ast/: mod.rs  statements.rs
crates/enums/: Cargo.toml
crates/enums/src/: data.rs  enums.rs  expr.rs  token.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: interpreter.rs
crates/interpreter/src/enums/: errors.rs
crates/interpreter/src/eval/: assignment.rs  binary.rs  comparison.rs  const.rs  function.rs  import.rs  index.rs  let.rs  list.rs  logical.rs  loop.rs  mod.rs  postfix.rs  prefix.rs  statement.rs  switch.rs  unary.rs  while.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: identifier.rs  lexer.rs  lists.rs  numbers.rs  string.rs
crates/lexer/src/enums/: errors.rs
crates/lexer/tests/: lexer_test.rs
crates/libs/: Cargo.toml
crates/libs/src/: io.rs  libs.rs  math.rs  parse.rs
crates/libs/tests/: io_test.rs  math_test.rs
crates/logger/: Cargo.toml
crates/logger/src/: batch.rs  logger.rs  macros.rs
crates/parser/: Cargo.toml
crates/parser/src/: argument.rs  arguments.rs  const.rs  consts.rs  context.rs  function.rs  import.rs  let.rs  list.rs  lists.rs  loop.rs  parser.rs  return.rs  statement.rs  statements.rs  switch.rs  vars.rs  while.rs
crates/parser/src/enums/: errors.rs
crates/parser/src/expressions/: binary.rs  comparison.rs  data.rs  delimiter.rs  logical.rs  mod.rs  not.rs  operator.rs  symbol.rs  unary.rs
crates/parser/tests/: if_statement.rs  io.rs
crates/types/: Cargo.toml
crates/types/src/: data.rs  errors.rs  expr.rs  token.rs  types.rs
crates/ui/src/components/: command.tsx  editor.tsx  input-entry.tsx  log-entry.tsx  logs.tsx  sidebar.tsx  terminal.tsx  titlebar.tsx
crates/ui/src/components/editors/: codemirror-editor.tsx  monaco-editor.tsx
crates/ui/src/components/ui/: command.tsx  dropdown-menu.tsx  file-tree.tsx  resizable.tsx  scroll-area.tsx
crates/ui/src/contexts/: editor-context.tsx  settings-context.tsx
crates/ui/src/displays/: main.tsx  router.tsx
crates/ui/src/displays/layouts/: main.tsx
crates/ui/src/displays/routes/: changelog.tsx  documentation.tsx  index.tsx  settings.tsx
crates/ui/src/language/: cobral.ts  completions.ts  highlight.ts  linter.ts  parser.js  parser.terms.js  snippets.ts  syntax.grammar
crates/ui/src/lib/: utils.ts
crates/ui/src/lib/codemirror/: cobral.ts  hover.ts
crates/ui/src/lib/language/: cobral.ts  highlight.ts  hover.ts  linter.ts  parser.js  parser.terms.js  syntax.grammar
crates/ui/src/lib/monaco/: cobral.json  completion.ts  constants.ts  linter.ts  setup.ts
crates/ui/src/lib/monaco/helpers/: extractImports.ts  extractSymbols.ts  tokenizer.ts
crates/ui/src/lib/monaco/rules/: importError.ts  incompatibleComparison.ts  undefinedDeclarations.ts  unusedDeclarations.ts
crates/ui/src/linter/: cobral.ts  highlight.ts  hover.ts  linter.ts  parser.js  parser.terms.js  snippets.ts  syntax.grammar  tokens.ts
crates/ui/src/styles/: main.css
