[workspace]
members = [ 
  "crates/*",
]
default-members = ["crates/app"]
resolver = "2"

package.edition = "2021"
package.authors = ["Luiz Henrique Xinaider"]
package.repository = "https://github.com/Moeefa/cobral.git"
package.version = "0.10.1"

[workspace.dependencies]
tauri-build = { version = "2", features = [] }
tauri = { version = "2", features = [] }

serde = { version = "1", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1"
colored = "2"
parking_lot = "0.12"
once_cell = "1.20.2"
thiserror = "2.0.11"
