[package]
name = "tauri_app"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "tauri_app"
crate-type = ["lib", "cdylib", "staticlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
cobral = { path = "../cobral" }
serde_json.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
thiserror.workspace = true
tokio.workspace = true
tauri.workspace = true
tauri-plugin-shell = "2"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
