[package]
name = "cobral"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "lib"
crate-type = ["lib", "cdylib", "staticlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
lexer.workspace = true
parser.workspace = true
interpreter.workspace = true
enums.workspace = true
logger.workspace = true
libs.workspace = true

tokio.workspace = true
tauri.workspace = true
tauri-plugin-shell.workspace = true
serde.workspace = true
serde_json.workspace = true
colored.workspace = true
crossbeam.workspace = true
crossbeam-channel.workspace = true
num_cpus = "1.0"

tauri-plugin-decorum = "1.1.1"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-devtools = "2.0.0"
