[package]
name = "cobral"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "lib"
crate-type = ["lib", "cdylib", "staticlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
lexer.workspace = true
parser.workspace = true
interpreter.workspace = true
enums.workspace = true
logger.workspace = true
libs.workspace = true

tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

# Plugins
tauri-plugin-shell = "2"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-devtools = "2.0.0"