[package]
name = "interpreter"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "interpreter"
path = "src/interpreter.rs"

[dependencies]
logger.workspace = true
enums.workspace = true
libs.workspace = true
tauri.workspace = true
parser.workspace = true
lexer.workspace = true
parking_lot.workspace = true
thiserror.workspace = true