[package]
name = "libs"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "libs"
path = "src/libs.rs"

[dependencies]
enums.workspace = true
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
logger.workspace = true
tokio.workspace = true