[package]
name = "logger"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "logger"
path = "src/logger.rs"

[dependencies]
colored.workspace = true
tauri.workspace = true
types.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true