[package]
name = "logger"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "logger"
path = "src/logger.rs"

[dependencies]
colored.workspace = true
tauri.workspace = true
enums.workspace = true
serde.workspace = true
serde_json.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
thiserror.workspace = true