[package]
name = "parser"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "parser"
path = "src/parser.rs"

[dependencies]
libs.workspace = true
enums.workspace = true
lexer.workspace = true
thiserror.workspace = true
parking_lot.workspace = true

# Only for tests
logger.workspace = true
colored.workspace = true